{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 19,
  "lineage": "d68f6bb1-f267-26a0-61e6-d6d9cff03b27",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/networkInterfaces/week07-nic",
            "internal_domain_name_suffix": "i3vjcrikpsaevjkbr3elybnxeh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/publicIPAddresses/week07-public-ip",
                "subnet_id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/virtualNetworks/week07-vnet/subnets/week07-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-ED-8D-11-0C-9A",
            "name": "week07-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Week07ResourceGroup",
            "virtual_machine_id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Compute/virtualMachines/week07-vm"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/week07-nsg",
            "location": "westeurope",
            "name": "week07-nsg",
            "resource_group_name": "Week07ResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/week07-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "week07-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Week07ResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/publicIPAddresses/week07-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.211.17.57",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "week07-public-ip",
            "resource_group_name": "Week07ResourceGroup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/virtualNetworks/week07-vnet/subnets/week07-subnet",
            "name": "week07-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Week07ResourceGroup",
            "virtual_network_name": "week07-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/virtualNetworks/week07-vnet/subnets/week07-subnet",
            "network_security_group_id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/week07-nsg",
            "subnet_id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/virtualNetworks/week07-vnet/subnets/week07-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "45916a47-7c0a-4a80-a541-8f48bc05b727",
            "id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/virtualNetworks/week07-vnet",
            "location": "westeurope",
            "name": "week07-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Week07ResourceGroup",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/virtualNetworks/week07-vnet/subnets/week07-subnet",
                "name": "week07-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/9bea7f40-ade6-473e-8329-ea42705a2415/resourceGroups/Week07ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/week07-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}